--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,8 @@
 services:
-  - type: web
-    name: telegram-downloader-bot
+  - type: worker
+    name: telegram-video-bot
     env: docker
-    plan: free
-    autoDeploy: true
-    healthCheckPath: /
+    dockerfilePath: ./Dockerfile
     envVars:
-      - key: TELEGRAM_TOKEN
+      - key: BOT_TOKEN
         sync: false
-      - key: USER_AGENT
-        value: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122 Safari/537.36
-      - key: YTDLP_COOKIES
-        value: /app/cookies.txt
